# funktio-ai-samples

./: .gitignore
.devcontainer/: devcontainer.json
fullstack-rag/backend/: pyproject.toml
fullstack-rag/backend/src/: app.py  qdrant.py  rag.py
fullstack-rag/backend/src/utils/: openai_utils.py  qdrant.py  rag.py
fullstack-rag/frontend/: package-lock.json  package.json
fullstack-rag/frontend/src/: App.css  App.js  QuestionForm.js
hf-spaces-demo/: app.py
hpe-quickspec-demo/: .gitignore  app.py  htmlTemplates.py  output.txt
hpe-quickspec-demo/infra/: cog_search.bicep  search_index.bicep
intelligent-scraping-demo/: app.py
knowledge-graph-demo/: .env  notebook.ipynb  requirements.txt
timescale-agents/: README.md  agent.py  app.py  css.py  db.py  device.py  pyproject.toml  shared.py
timescale-dataviz/: app.py  db.py  forecasting.py  load_data.py  pyproject.toml  visualization.py
timescale-dataviz/data/: bitcoin_data.csv  ethereum_data.csv  solana_data.csv
timescale-demo/: demo.ipynb  pyproject.toml  sample.env
timescale-demo/data/: Fortune_1000.csv  all_news.json  companies_dict.json  dummy_sales_transactions.csv  fortune_100_with_descriptions.csv  fortune_100_with_embeddings.csv  news_data.csv
trulens-eval-demo/: RAG_eval.ipynb  default.sqlite  ipcc_test_questions.csv  requirements.txt
visual-model-comparison/: README.md  streamlit_dashboard.py  visual_model_comparison.ipynb
visual-model-comparison/eval_results/: claude-haiku_evals.csv  claude-opus_evals.csv  gemini_evals.csv  gpt4_evals.csv
