[tool.poetry]
name = "timescale-demo"
version = "0.1.0"
description = ""
authors = ["Jolkkonen, Johannes (External) <johannes@funktio.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
pgcopy = "^1.5.0"
openai = "^1.14.1"
pandas = "^2.2.1"
ipykernel = "^6.29.3"
timescale-vector = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
